--- a/views/_layouts/footer.ejs
+++ b/views/_layouts/footer.ejs
@@ -1,3 +1,43 @@
+<div class="section " style="background:#0C2074;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center mb-5">
+                <p class="text-white footer-text">Email us at <a href="mailto:hello@esatya.io"
+                        class="text-white">hello@esatya.io</a></p>
+                <a href="https://www.facebook.com/eSatya8848/" class="text-white"> <i
+                        class="material-icons p-2">facebook</i></a>
+                <a href="tel:+977 9801230044" class="text-white"><i class="material-icons p-2">phone</i></a>
+                <a href="https://esatya.io/" class="text-white"><i class="material-icons p-2">language</i></a>
+            </div>
+            <div class="col-md-4 text-center">
+            </div>
+            <div class="col-md-1">
+                <p class="text-white footer-text"><a href="/home" class="text-white">Home</a></p>
+            </div>
+            <div class="col-md-1">
+                <p class="text-white footer-text"> <a href="/about-us" class="text-white">About</a></p>
+            </div>
+
+            <div class="col-md-1">
+                <p class="text-white footer-text"><a href="Team" class="text-white">Team</a></p>
+            </div>
+
+            <div class="col-md-1">
+                <p class="text-white footer-text"><a href="Contact" class="text-white">Contact</a></p>
+            </div>
+            <div class="col-md-4"></div>
+            <div class="col-md-12 text-center mt-3 text-white">
+                <p class="footer-text">Powered by 2019 Ⓒ <a href="https://esatya.io/" style="color:#eccf17">eSatya</a>.
+                    Designed by <a href="https://rumsan.com" style="color:#eccf17">Rumsan</a>
+                </p>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
+
 <!--   Core JS Files   -->
 <script src="/materialui/assets/js/core/jquery.min.js" type="text/javascript"></script>
 <script src="/materialui/assets/js/core/popper.min.js" type="text/javascript"></script>
