--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,13 +76,15 @@
   <div class="container loan-container">
     <section class="custom-category">
       <div class="sort-bar mt-2">
-        <div style="width: auto;">
+        <div style="width: 270px;">
           <select id="sort_by" class="px-2 ml-2 custom-select">
            <option value="" disabled selected hidden>Select an option...</option>
            <option>Interest Rate (Low to High)</option>
            <option>Interest Rate (High to Low)</option>
-           <option>Minimum Balance (Low to High)</option>
-           <option>Minimum Balance (High to Low)</option>
+           <option>Base Rate (Low to High)</option>
+           <option>Base Rate (High to Low)</option>
+           <option>Total Interest Rate (Low to High)</option>
+           <option>Total Interest Rate (High to Low)</option>
          </select>
        </div>  
        <h4>
@@ -146,6 +148,10 @@
     $('#loader-carousel').hide();
     $('#loader').hide();
     let rightButtonCounter = 0; 
+    let appendFunctionCounter = 0;
+    let currentLoanData;
+
+    console.log(appendFunctionCounter);
 
       $('#next_slide').on('click',() => {
         if(rightButtonCounter == 0){
@@ -239,12 +245,14 @@
 
     /* Append Function */
     function append(loan_type){
+      console.log('currentLoanData',currentLoanData);
       $('.loan-card').empty();
       $('#loader').show();
       console.log(loan_type);      
       $.get('/api/v1/all-data',{type: loan_type}, (data) =>{        
         console.log(data);
-        
+        currentLoanData = data;
+        console.log(currentLoanData);
         data.forEach(el =>{
           $('.loan-card').append(`
           <div class="row">
@@ -296,9 +304,132 @@
         });
         $('#loader').hide();
       });
+      appendFunctionCounter++;
+      console.log(appendFunctionCounter);
     }
+    console.log(appendFunctionCounter);
     /* append function end */
+    console.log('currentLoanData',currentLoanData);
 
+    /* sortedAppend function */
+    function sortedAppend(sortedLoanData){
+      sortedLoanData.forEach(el =>{
+              $('.loan-card').append(`
+                <div class="row">
+                  <div class="col-md-3 first">
+                    <h4>${el.bank_name}</h4>
+                      <div class="img-container">
+                        <img src="/img/primebank.png">
+                      </div>
+                  </div>
+                  <div class="col-md-6 second">
+                    <h4>${el.product_type}</h4>
+                    <p>${el.product_name}</p>
+                    <div class="interest_rate">
+                      <p>
+                        Interest Rate</br>
+                      </p>
+                      <ul>
+                        <li class="interest_rate_add"> ${el.interest_rate} %</li>
+                      </ul>
+                    </div>
+                    <div class="interest_rate">
+                      <p>
+                        Base Rate</br>
+                      </p>
+                      <ul>
+                        <li class="interest_rate_add"> ${el.base_rate} %</li>
+                      </ul>
+                    </div>
+                    <div class="interest_rate">
+                      <p>
+                        Total Interest Rate</br>
+                      </p>
+                      <ul class="mb-0">
+                        <li class="interest_rate_add"> ${el.total_interest_rate} %</li>
+                      </ul>
+                    </div> 
+                  </div>
+                  <div class="col-md-3 third">
+                    <button type="button" class="btn btn-primary">Apply now</button>
+                    <button type="button" class="btn btn-primary">learn more</button>
+                    <div class="custom-checkbox">
+                      <input type="checkbox" id="" value="">
+                      <p class="mb-0 ml-3">Select to compare </p>
+                    </div>
+                  </div>
+                </div>
+                <hr>
+              `);
+            });
+    }
+    /* sortedAppend function end */
+
+      $('#sort_by').on('change', function() {
+        if(appendFunctionCounter > 0 ){
+          console.log( this.value );
+          if( this.value == "Interest Rate (Low to High)"){         
+            
+            let sortedLoanData = currentLoanData.sort( function(a,b){
+              return a.interest_rate - b.interest_rate;
+            });
+            console.log('sortedloandata',sortedLoanData);
+            $('.loan-card').empty();  
+            sortedAppend(sortedLoanData);           
+          }
+
+          if(this.value == "Interest Rate (High to Low)"){
+            let sortedLoanData = currentLoanData.sort( function(a,b){
+              return b.interest_rate - a.interest_rate;
+            });
+            console.log('sortedloandata',sortedLoanData);
+            $('.loan-card').empty();  
+            sortedAppend(sortedLoanData);           
+          }
+
+          if( this.value == "Base Rate (Low to High)"){         
+            
+            let sortedLoanData = currentLoanData.sort( function(a,b){
+              return a.base_rate - b.base_rate;
+            });
+            console.log('sortedloandata',sortedLoanData);
+            $('.loan-card').empty();  
+            sortedAppend(sortedLoanData);           
+          }
+
+          if(this.value == "Base Rate (High to Low)"){
+            let sortedLoanData = currentLoanData.sort( function(a,b){
+              return b.base_rate - a.base_rate;
+            });
+            console.log('sortedloandata',sortedLoanData);
+            $('.loan-card').empty();  
+            sortedAppend(sortedLoanData);           
+          }
+
+          if( this.value == "Total Interest Rate (Low to High)"){ 
+            let sortedLoanData = currentLoanData.sort( function(a,b){
+              return a.total_interest_rate - b.total_interest_rate;
+            });
+            console.log('sortedloandata',sortedLoanData);
+            $('.loan-card').empty();  
+            sortedAppend(sortedLoanData);           
+          }
+
+          if(this.value == "Total Interest Rate (High to Low)"){
+            let sortedLoanData = currentLoanData.sort( function(a,b){
+              return b.total_interest_rate - a.total_interest_rate;
+            });
+            console.log('sortedloandata',sortedLoanData);
+            $('.loan-card').empty();  
+            sortedAppend(sortedLoanData);           
+          }
+
+
+        }
+      });
+    
+    
+  
 
   </script> 
   
