--- a/views/compare.ejs
+++ b/views/compare.ejs
@@ -10,7 +10,7 @@
     <%- include('_layouts/navbar') %>
 
 
-    <div class="container">
+    <div class="container pb-5">
         <div class="row">
             <div class="col-md-12">
                 <h1 class="section_title text-center">
