added select option in compare page

--- a/views/compare.ejs
+++ b/views/compare.ejs
@@ -23,143 +23,54 @@
 
 
         <div class="row mt-4">
+            
             <div class="col-md-4">
-                <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle p-0 compare-dropdown" href="javascript:;"
-                        id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Select to Compare
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <div class="row compare-dropdown-row dropdown-item">
-                            <div class="col-md-2 p-0">
-                                <div class="compare-dropdown-img-container">
-                                    <img src="/img/primesquare.png">
-                                </div>
-
-                            </div>
-                            <div class="col-md-10">
-                                <a href="javascript:;" class="dropdown-link">Prime Bank</a>
-                            </div>
-                        </div>
-                        <hr class="m-0">
-                        <div class="row compare-dropdown-row dropdown-item">
-                            <div class="col-md-2 p-0">
-                                <div class="compare-dropdown-img-container">
-                                    <img src="/img/sunrisesquare.png">
-                                </div>
-
-                            </div>
-                            <div class="col-md-10">
-                                <a href="javascript:;" class="dropdown-link">Sunrise Bank</a>
-                            </div>
-                        </div>
-                        <hr class="m-0">
-
-                        <div class="row compare-dropdown-row dropdown-item">
-                            <div class="col-md-2 p-0">
-                                <div class="compare-dropdown-img-container">
-                                    <img src="/img/siddarthasquare.png">
-                                </div>
-
-                            </div>
-                            <div class="col-md-10">
-                                <a href="javascript:;" class="dropdown-link">Siddartha Bank</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <h4 class = "px-2 ml-2 font-weight-bold">
+                    Bank : 
+                </h4>
+                <div style="width: 100%;">
+                    <select id="sort_by" class="px-2 ml-2 custom-select">
+                     <option value="" disabled selected hidden>Select an option...</option>
+                     <option>Interest Rate (Low to High)</option>
+                     <option>Interest Rate (High to Low)</option>
+                     <option>Base Rate (Low to High)</option>
+                     <option>Base Rate (High to Low)</option>
+                     <option>Total Interest Rate (Low to High)</option>
+                     <option>Total Interest Rate (High to Low)</option>
+                   </select>
+                 </div>  
             </div>
             <div class="col-md-4">
-                <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle p-0 compare-dropdown" href="javascript:;"
-                        id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Select to Compare
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <div class="row compare-dropdown-row dropdown-item">
-                            <div class="col-md-2 p-0">
-                                <div class="compare-dropdown-img-container">
-                                    <img src="/img/primesquare.png">
-                                </div>
-
-                            </div>
-                            <div class="col-md-10">
-                                <a href="javascript:;" class="dropdown-link">Prime Bank</a>
-                            </div>
-                        </div>
-                        <hr class="m-0">
-                        <div class="row compare-dropdown-row dropdown-item">
-                            <div class="col-md-2 p-0">
-                                <div class="compare-dropdown-img-container">
-                                    <img src="/img/sunrisesquare.png">
-                                </div>
-
-                            </div>
-                            <div class="col-md-10">
-                                <a href="javascript:;" class="dropdown-link">Sunrise Bank</a>
-                            </div>
-                        </div>
-                        <hr class="m-0">
-
-                        <div class="row compare-dropdown-row dropdown-item">
-                            <div class="col-md-2 p-0">
-                                <div class="compare-dropdown-img-container">
-                                    <img src="/img/siddarthasquare.png">
-                                </div>
-
-                            </div>
-                            <div class="col-md-10">
-                                <a href="javascript:;" class="dropdown-link">Siddartha Bank</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <h4 class = "px-2 ml-2 font-weight-bold">
+                    Bank : 
+                </h4>
+                <div style="width: 100%;">
+                    <select id="sort_by" class="px-2 ml-2 custom-select">
+                     <option value="" disabled selected hidden>Select an option...</option>
+                     <option>Interest Rate (Low to High)</option>
+                     <option>Interest Rate (High to Low)</option>
+                     <option>Base Rate (Low to High)</option>
+                     <option>Base Rate (High to Low)</option>
+                     <option>Total Interest Rate (Low to High)</option>
+                     <option>Total Interest Rate (High to Low)</option>
+                   </select>
+                 </div>  
             </div>
             <div class="col-md-4">
-                <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle p-0 compare-dropdown" href="javascript:;"
-                        id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Select to Compare
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <div class="row compare-dropdown-row dropdown-item">
-                            <div class="col-md-2 p-0">
-                                <div class="compare-dropdown-img-container">
-                                    <img src="/img/primesquare.png">
-                                </div>
-
-                            </div>
-                            <div class="col-md-10">
-                                <a href="javascript:;" class="dropdown-link">Prime Bank</a>
-                            </div>
-                        </div>
-                        <hr class="m-0">
-                        <div class="row compare-dropdown-row dropdown-item">
-                            <div class="col-md-2 p-0">
-                                <div class="compare-dropdown-img-container">
-                                    <img src="/img/sunrisesquare.png">
-                                </div>
-
-                            </div>
-                            <div class="col-md-10">
-                                <a href="javascript:;" class="dropdown-link">Sunrise Bank</a>
-                            </div>
-                        </div>
-                        <hr class="m-0">
-
-                        <div class="row compare-dropdown-row dropdown-item">
-                            <div class="col-md-2 p-0">
-                                <div class="compare-dropdown-img-container">
-                                    <img src="/img/siddarthasquare.png">
-                                </div>
-
-                            </div>
-                            <div class="col-md-10">
-                                <a href="javascript:;" class="dropdown-link">Siddartha Bank</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <h4 class = "px-2 ml-2 font-weight-bold">
+                    Bank : 
+                </h4>
+                <div style="width: 100%;">
+                    <select id="sort_by" class="px-2 ml-2 custom-select">
+                     <option value="" disabled selected hidden>Select an option...</option>
+                     <option>Interest Rate (Low to High)</option>
+                     <option>Interest Rate (High to Low)</option>
+                     <option>Base Rate (Low to High)</option>
+                     <option>Base Rate (High to Low)</option>
+                     <option>Total Interest Rate (Low to High)</option>
+                     <option>Total Interest Rate (High to Low)</option>
+                   </select>
+                 </div>  
             </div>
         </div>
         <div class="row mt-5">
@@ -282,6 +193,15 @@
 
     </div>
     <%- include('_layouts/footer') %>
+
+    <script>
+        $.get('/api/v1/bank-names',{}, (data) => {
+            console.log(data);
+            data.forEach((el) => {
+                
+            })
+        });
+    </script>
 
 
 
