--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,18 +12,15 @@
     <div class="container-fluid">
       <div class="row mt-3">
         <div class="col-md-1 mt-2">
-          <a class="btn btn-primary" style="width: 100%; margin:0;" href="#multi-item-example" data-slide="prev"><i
+          <a class="btn btn-primary btn-sm" href="#multi-item-example" data-slide="prev"><i
               class="fa fa-chevron-left"></i></a>
         </div>
         <div class="col-md-10">
-
           <div id="loader-carousel" class="text-center">
             <div class="spinner-border text-dark" role="status">
               <span class="sr-only">Loading...</span>
             </div>
           </div>
-
-
           <!--Carousel Wrapper-->
           <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
             <!--Slides-->
