--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,27 +39,28 @@
                   <div class="col-md-3">
                     <div class="card my-2 p-5 card_slider" style="text-align: center;">
                       <a id="_No_match" class="slider_text" href="#"> <i
-                          class="material-icons slider_icon">attach_money</i><br />_No
+                          class="material-icons slider_icon">account_balance
+                        </i><br />No
                         Match</a>
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="card my-2 p-5 card_slider" style="text-align: center;">
                       <a id="Nari Bachat" href="#" class="slider_text"><i class="material-icons slider_icon">
-                          money</i><br />Nari Bachat</a>
+                          face</i><br />Nari Bachat</a>
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="card my-2 p-5 card_slider" style="text-align: center;">
                       <a id="Kids Savings" href="#" class="slider_text"><i class="material-icons  slider_icon">
-                          local_atm
+                          child_care
                         </i><br />Kids Savings</a>
                     </div>
                   </div>
                   <div class="col-md-3">
                     <div class="card my-2 p-5 card_slider" style="text-align: center;">
                       <a id="Old Age Saving" href="#" class="slider_text"><i class="material-icons  slider_icon">
-                          local_atm
+                          accessibility_new
                         </i><br />Old Age Saving</a>
                     </div>
                   </div>
