--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -57,3 +57,4 @@ var meta = {
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
 
 <link rel='stylesheet' href='/css/custom.css' />
+<link rel='stylesheet' href='/css/mobile.css' />
