--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,10 +80,9 @@
       </div>
     </div>
   </div>
-
   <div class="container loan-container">
     <section class="custom-category">
-      <div class="sort-bar mt-2">
+      <div class="sort-bar mt-3">
         <div style="width: 270px;">
           <select id="sort_by" class="px-2 ml-2 custom-select">
             <option value="" disabled selected hidden>Select an option...</option>
@@ -95,8 +94,8 @@
             <option>Total Interest Rate (High to Low)</option>
           </select>
         </div>
-        <h4>
-          Sort By:
+        <h4 class="filter_by">
+          FILTER BY
         </h4>
       </div>
       <hr class="mt-0">
