--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -72,7 +72,7 @@ hr {
 }
 
 .loan-card hr {
-  border-top: 1px solid #0c2074;
+  border-top: 1px solid #d4d9ec;
 }
 
 .loan-card h4 {
@@ -278,4 +278,10 @@ a:hover {
 
 .chevron-margin {
   margin-top: 6rem;
+}
+
+.filter_by {
+  font-size: 18px;
+  font-weight: 500;
+  color: rgb(36, 42, 47);
 }
