changing color of bank name

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -271,13 +271,13 @@
           $('.loan-card').append(`
           <div class="row">
             <div class="col-md-3 first">
-              <h2>${el.bank_name}</h2>
+              <h2 class="text-primary">${el.bank_name}</h2>
                 <div class="img-container">
                   <img src="/img/primebank.png">
                 </div>
             </div>
             <div class="col-md-6 second">
-              <h4 class="text-primary">${el.product_type}</h4>
+              <h4 >${el.product_type}</h4>
               <p>${el.product_name}</p>
               <div class="interest_rate">
                 <p>
