--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <h1 class="section_title text-center">
-            Choose Bank Loans
+            Bank Loans Available in Nepal
           </h1>
           <p class="text-center">Choose the type of loan you are looking for...</p>
         </div>
